# eohu...lang

./: .gitignore  README.md  eohulang.bat  eohulang.py  pyproject.toml
docs/: index.html
examples/: hello_world.eohu  print_1_plus_1.eohu
src/eohulang/: __init__.py  cli.py  language.py
