[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eohulang"
version = "0.1.0"
description = "A meme-flavored esolang centered on 어흐 and ㅗㅜㅑ."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "vulpe" }
]
license = { text = "MIT" }

[project.scripts]
eohulang = "eohulang.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
